Change a few settings in inventory